--- a/_content/phase_x_misc/lyrics/020_yankee_doodle.adoc
+++ b/_content/phase_x_misc/lyrics/020_yankee_doodle.adoc
@@ -120,7 +120,7 @@ And 'round the town be handy._
 
 These lyrics are written and copyrighted 2025 by Vector Hasting. 
 
-I, Vector Hasting, deed use of them under Creative Commons link:http://creativecommons.org/licenses/by-sa/4.0/[Creative Commons Attribution 4.0 International License]
+I, Vector Hasting, deed use of them under Creative Commons link:http://creativecommons.org/licenses/by-sa/4.0/["Creative Commons Attribution 4.0 International License",window=read-later,opts="noopener,nofollow"]
 
 "I hope they will be used in all means possible to promote the goals of restoring and securing Liberty and Justice for All." - Vector Hasting 
 
