--- a/_content/Page_Draft_Status.adoc
+++ b/_content/Page_Draft_Status.adoc
@@ -24,19 +24,19 @@ These icons are as follows:
 |===
 |Icon | Description
 
-|image:icons/Draft_Complete_0.png[36,45]
+|image:icons/draft_complete_0.png[36,45]
 |0% Complete means the document exists primarily as a placeholder. It may have some text to explain its intended purpose. Reading it will only convey a broad sense of information or concepts to be explored.
 
-|image:icons/Draft_Complete_25.png[36,45]
+|image:icons/draft_complete_25.png[36,45]
 |25% Complete means the document may convey a basic structure of the information it will explore. Reading it without extra information from the author will be confusing. It may contain incomplete sentences, contradictory wording. It is of use to those in contact with the author who may be collaborating on the document. 
 
-|image:icons/Draft_Complete_50.png[36,45]
+|image:icons/draft_complete_50.png[36,45]
 |50% Complete means the document has structure and sections that are coherent. A reader should come away with a general sense of the intended final document. However, much of the content is preliminary and may be eliminated, and much content is also probably missing. 
 
-|image:icons/Draft_Complete_75.png[36,45]
+|image:icons/draft_complete_75.png[36,45]
 |75% Complete means the document has a complete structure and is not missing major parts of information, unless those parts are clearly identified and minor relative to the rest of the document (such as missing references, or missing tables & figures, etc.) A reader should be able to have a clear understanding of the intended final document and offer useful critique to the current state of the document. 
 
-|image:icons/Draft_Complete_100.png[36,45]
+|image:icons/draft_complete_100.png[36,45]
 |100% Complete means the author of the document has no immediate plans to make changes to the document. It is still "Draft" only in the sense that ProjectLiberty2029 is intended as a collaborative process and all information may be subject to improvement in the future. 
 |===
 
