--- a/_content/election_2028/the_coming_constitutional_hack.adoc
+++ b/_content/election_2028/the_coming_constitutional_hack.adoc
@@ -94,7 +94,7 @@ Here is a review of how our convoluted Electoral College system of voting works:
 ====
 *Firstly:* 
 
-Step 5 in <<The Points of Failure, Points of Failure>> means that Elector Certificates will be delivered during December 2028 to both the Archivist of the US (a MAGA regime appointee) and the Vice-President of the US. Both of these individuals face legal peril for their activities during the MAGA regime. 
+Step 5 in <<The Points Of Failure, Points of Failure>> means that Elector Certificates will be delivered during December 2028 to both the Archivist of the US (a MAGA regime appointee) and the Vice-President of the US. Both of these individuals face legal peril for their activities during the MAGA regime. 
  
 Those Elector Certificates are vulnerable to alteration under the pretense that there was election rigging and therefore the Vice-President and/or the Archivist is rectifying the "problem" by "restoring" the "legitimate" (but actually fraudulent) Elector Certificates. 
 
@@ -269,7 +269,7 @@ and the rules of link:https://www.govinfo.gov/content/pkg/USCODE-2024-title3/htm
 .. Because the security apparatus of the US has been compromised by the MAGA regime, the incoming President Elect should be protected not by Secret Service, but by National Guard and State Troopers from States whose Governors are working to preserve and protect the Constitution. 
 .. This non-Secret Service protection should continue until the incoming post-MAGA Administration has been able to vet bad-actors from law enforcement and security services. 
 
-## Summary of the defense
+## Summary of the Defense
 
 [.lead]
 January 6th, 2029 is likely to see a repeat of a surrounded Capitol but at an exponentially larger scale. 
